test_case/rust-lang_rust/28046_136041521.rs
 Rust
fn foo<'a>(){}
fn main() {
    foo::<'static>() //~ ERROR too many lifetime parameters provided
}
